--- a/.htaccess
+++ b/.htaccess
@@ -36,7 +36,9 @@ RewriteRule ^([^.]+)/$ $1.html [L]
 
 
 # DO NOT REMOVE THIS LINE AND THE LINES BELLOW UPGRADE_INSECURE_REQUESTS:korgatto.com
-Header always set Content-Security-Policy: upgrade-insecure-requests
+#Header always set Content-Security-Policy: upgrade-insecure-requests
+Header always add Access-Control-Allow-Methods "POST, GET, PUT, OPTIONS, PATCH, DELETE"
+Header always add Access-Control-Allow-Headers "X-Accept-Charset,X-Accept,Content-Type"
 # DO NOT REMOVE THIS LINE AND THE LINES BELLOW UPGRADE_INSECURE_REQUESTS:korgatto.com
 
 
